--- a/binbou.html
+++ b/binbou.html
@@ -4,7 +4,7 @@
 <title>binbou html</title>
 </head>
 <body>
-<p>落ちぶれてすまん！</p>
-<p>ぽっくんしらんぷりん…</p>
+<p>落ちぶれてすまん！ by びんぼっちゃま</p>
+<p>ぽっくんしらんぷりん… by ちゃま</p>
 </body>
 </html>
